Disable 'Merge' and 'Clear zero' actions while editing splits.

Modifying the split table while it's in edit can cause a crash so
disable these action while in edit.

BUG: 341040
(cherry picked from commit bdfaa51c9e85a642e39822a2a378a87d42941558)